syntax = "proto3";

package com.huawei.fit.hakuna.kernel.registry.shared;

option optimize_for = LITE_RUNTIME;
option java_package = "com.huawei.fit.hakuna.kernel.registry.shared.proto";
option java_outer_classname = "FitableInstanceProto";

import "com/huawei/fit/hakuna/kernel/shared/Fitable.proto";
import "com/huawei/fit/hakuna/kernel/registry/shared/ApplicationInstance.proto";


message FitableInstance {
  repeated com.huawei.fit.hakuna.kernel.registry.shared.ApplicationInstance applicationInstances = 1;
  com.huawei.fit.hakuna.kernel.shared.Fitable fitable = 2;
}